# NexGaurd

./: .env  .gitignore  AzuriteConfig  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  app.py  app.spec  fraud_inference.py  helpers.py  requirements.txt
Connectivity/: event_hub.py  function_conn.py
FruadPrediction/: Fraud_Function.py  tx_func.py
MyProjFolder/: .gitignore  __init__.py  app.py  app.spec  app2.py  app3.py  app4.py  auth_server.py  chart.py  churnResults.json  churnResults.py  database.py  fraudPrediction.py  fraudResults.py  fraud_prediction_trigger.py  function_app.py  predictions_output.csv  pyproject.toml  requirements.txt
MyProjFolder/ChurnTimerTrigger/: __init__.py
MyProjFolder/FraudTimerTrigger/: __init__.py
MyProjFolder/UI/: Utilities.py  cloudPage.py  profilPage.py
MyProjFolder/app/: Analysis-00.toc  warn-app.txt
MyProjFolder/uploadingTable/: SelectDatabase.py
MyProjFolder/uploadingTable/churnTables/: addingChrunCol.py  checkingChurn.py  chrunTable.py  churnCheck.py  resultChurnTable.py
MyProjFolder/uploadingTable/fraudTables/: addingFraud.py  checkingFraud.py  fraudCheck.py  x_test_inference.csv
__blobstorage__/: 1ad42312-1a4a-4dcf-a3fd-a92280542598  247e1f18-c93b-463e-a962-ee969667ffec  f0a83f31-f28d-4bc8-9f2b-051ffcf42b70  f78c46b9-3776-40e7-aeae-11a5d1f1a478  f89d5a4a-257a-468a-a673-f82830aae398
fastapi_app/: fraudPrediction.py
uploadingTable/churnTables/: addingChrunCol.py  checkingChurn.py  chrunTable.py
(+3 files in other folders)
